k8s/base/service.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: microapp-svc
  labels:
    app: microapp
spec:
  selector:
    app: microapp
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
